@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-04-52
+2013-12-06 Matt
+- add Evr::SrcConfigV1 for event source hardware - SLAC modification of EVR.
+
 Tag: V00-04-51
 2013-12-02 Andy
 - add "config-type" tag to EpixSampler.ConfigV1
